<resources>
    <string name="app_name">HomeBalance</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create an account</string>
    <string name="by">By</string>
    <string name="mylogin">Make your login</string>
    <string name="myregister">Make your register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="fgpass">Forgot Password?</string>
    <string name="members">Members:</string>
    <string name="teste">Teste</string>
    <string name="datacriacao">Task Creation Date:</string>
    <string name="datalimite">Task Deadline:</string>
    <string name="adicionarCasa">Add House</string>
    <string name="housename">House Name:</string>
    <string name="houseaddress">House Address:</string>
    <string name="invite">Invite Participants</string>
    <string name="addhouse">Add House</string>
    <string name="taskname">Task Name:</string>
    <string name="createtask">Create Task</string>
    <string name="tasktodo">To Do:</string>
    <string name="task_description">Add a comment:</string>
    <string name="responsible">Task Responsible:</string>
    <string name="state">Task State:</string>
    <string name="concludetask">Conclude Task</string>
    <string name="doReview">Make Review</string>
    <string name="writeReview">Write a Review...</string>
    <string name="joinpremium">Join Premium</string>
    <string name="managemhomes">Manage Homes</string>
    <string name="unlimitedtask">Unlimited Tasks</string>
    <string name="taskphotos">Add Task Photos</string>
    <string name="addhomes">Add Homes</string>
    <string name="nrResidences">Number of Homes:</string>
    <string name="nrConcludedTasks">Number of Concluded Tasks</string>
    <string name="availablehouses">Available Houses:</string>
    <string name="taskimage">TaskImage</string>
    <string name="comment">Comment:</string>
    <string name="go_back">Go Back</string>
    <string name="see_reviews">See Reviews</string>
</resources>