<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Beige"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="100dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/mylogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/myregister"
        android:textColor="@color/logo_blue"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="17dp"
        android:backgroundTint="@color/logo_blue"
        android:hint="@string/name"
        android:textColorHint="@color/logo_blue"
        app:layout_constraintTop_toBottomOf="@id/mylogin"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="17dp"
        android:backgroundTint="@color/logo_blue"
        android:hint="@string/email"
        android:textColorHint="@color/logo_blue"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="17dp"
        android:backgroundTint="@color/logo_blue"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/logo_blue"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/logo_blue"
        android:onClick="Register"
        android:padding="13dp"
        android:text="@string/register"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="360dp"
        android:onClick="goBack"
        android:src="@drawable/icons8_back_50px_1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/by"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/pngpretologo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_by"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>