<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Beige"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="50dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/mylogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        tools:ignore="MissingConstraints"
        android:text="@string/mylogin"
        android:textColor="@color/logo_blue"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/mylogin"
        android:layout_marginTop="100dp"
        android:text="@string/email"
        android:layout_marginLeft="17dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:backgroundTint="@color/logo_blue"
        />




    

</androidx.constraintlayout.widget.ConstraintLayout>