<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Beige"
    tools:context=".TaskDetailActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@color/dark_beige"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="130dp" />

        <ImageView
            android:id="@+id/placeholder_icon"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icons8_add_96px" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_TaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:textSize="23sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/logo_blue"
        android:textColorHint="@color/logo_blue"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />


    <RelativeLayout
        android:id="@+id/TaskManagingLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_TaskName">


        <!-- Guideline to limit the TextViews and DatePickers -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <!-- LinearLayout for the content -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/imageView"
            android:layout_toLeftOf="@id/imageView"
            android:orientation="vertical">

            <!-- Content within the RelativeLayout -->
            <TextView
                android:id="@+id/textView_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datacriacao"
                android:textColor="@color/logo_blue"
                android:textSize="17sp" />

            <!-- DatePicker for task deadline -->
            <DatePicker
                android:id="@+id/dtpicker_end"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </LinearLayout>

        <!-- ImageView -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icons8_person_96px" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/TaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/TaskManagingLayout"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:text="@string/tasktodo"
                    android:textColor="@color/logo_blue"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_ToDo"
                    android:layout_width="175dp"
                    android:layout_height="120dp"
                    android:background="@color/dark_beige"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="@color/logo_blue"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="175dp"
                    android:layout_height="120dp"
                    android:background="@color/dark_beige"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_responsible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/logo_blue"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TaskDescription" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_responsible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnCreateTask">

        <TextView
            android:id="@+id/tv_doReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doReview"
            android:text="@string/doReview"/>

        <TextView
            android:id="@+id/tv_SeeReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_reviews"
            android:layout_marginLeft="80dp"/>
    </LinearLayout>



    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/logo_blue"
        android:text="@string/go_back"
        app:layout_constraintBottom_toTopOf="@id/Bottom_Layout" />

    <LinearLayout
        android:id="@+id/Bottom_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_beige"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageHome"
                android:layout_width="22dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/icons8_home_96px_7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:onClick="openProfile"
                android:src="@drawable/icons8_person_96px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>