<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Beige"
    tools:context=".AddTaskActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@color/dark_beige"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="130dp" />

        <ImageView
            android:id="@+id/placeholder_icon"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icons8_add_96px" />

    </LinearLayout>


    <EditText
        android:id="@+id/et_TaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/taskname"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:textColorHint="@color/logo_blue"
        android:backgroundTint="@color/logo_blue"
        />


    <RelativeLayout
        android:id="@+id/TaskManagingLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_TaskName"
        android:layout_marginLeft="10dp">

        <!-- Guideline to limit the TextViews and DatePickers -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <!-- LinearLayout for the content -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/imageView"
            android:layout_toStartOf="@id/imageView"
            android:orientation="vertical">

            <!-- Content within the RelativeLayout -->
            <TextView
                android:id="@+id/textView_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datacriacao"
                android:textSize="17sp"
                android:textColor="@color/logo_blue"/>

            <!-- DatePicker for task creation date -->
            <DatePicker
                android:id="@+id/dtpicker_start"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <!-- TextView for task deadline -->
            <TextView
                android:id="@+id/textView_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datalimite"
                android:textSize="17sp"
                android:textColor="@color/logo_blue"/>

            <!-- DatePicker for task deadline -->
            <DatePicker
                android:id="@+id/dtpicker_end"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </LinearLayout>

        <!-- ImageView -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icons8_person_96px"/>

        <!-- Button -->
        <Button
            android:id="@+id/buttonAddPhoto"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/imageView"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/logo_blue"
            android:text="Add Photo" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TaskManagingLayout"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_task_name"/>

        <TextView
            android:id="@+id/tv_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_task_name"
            android:text="@string/task_description"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/et_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_task_description"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:maxLines="5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>




    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/Bottom_Layout"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="17dp"
        android:layout_marginLeft="17dp"
        android:backgroundTint="@color/logo_blue"
        android:text="@string/createtask"
        />

    <LinearLayout
        android:id="@+id/Bottom_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/dark_beige">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/imageHome"
                android:layout_width="22dp"
                android:layout_height="30dp"
                android:src="@drawable/icons8_home_96px_7"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="100dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icons8_person_96px"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>